// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 3: Coordinate Calculation (Snapshot-based) > should calculate correct coordinates for input-4outputs.bpmn 1`] = `
{
  "end1": {
    "height": 36,
    "width": 36,
    "x": 832,
    "y": 332,
  },
  "gw1": {
    "height": 50,
    "width": 50,
    "x": 425,
    "y": 511,
  },
  "start1": {
    "height": 36,
    "width": 36,
    "x": 232,
    "y": 332,
  },
  "task1": {
    "height": 80,
    "width": 100,
    "x": 400,
    "y": 310,
  },
  "task2": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 496,
  },
  "task3": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 632,
  },
  "task4": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 768,
  },
  "task5": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 904,
  },
}
`;

exports[`Phase 3: Coordinate Calculation (Snapshot-based) > should calculate correct coordinates for input-4outputs.bpmn 2`] = `
{
  "f1": [
    {
      "x": 268,
      "y": 350,
    },
    {
      "x": 400,
      "y": 350,
    },
  ],
  "f10": [
    {
      "x": 700,
      "y": 944,
    },
    {
      "x": 850,
      "y": 944,
    },
    {
      "x": 850,
      "y": 368,
    },
  ],
  "f2": [
    {
      "x": 450,
      "y": 390,
    },
    {
      "x": 450,
      "y": 511,
    },
  ],
  "f3": [
    {
      "x": 475,
      "y": 536,
    },
    {
      "x": 600,
      "y": 536,
    },
  ],
  "f4": [
    {
      "x": 450,
      "y": 561,
    },
    {
      "x": 450,
      "y": 672,
    },
    {
      "x": 600,
      "y": 672,
    },
  ],
  "f5": [
    {
      "x": 450,
      "y": 561,
    },
    {
      "x": 450,
      "y": 808,
    },
    {
      "x": 600,
      "y": 808,
    },
  ],
  "f6": [
    {
      "x": 450,
      "y": 561,
    },
    {
      "x": 450,
      "y": 944,
    },
    {
      "x": 600,
      "y": 944,
    },
  ],
  "f7": [
    {
      "x": 700,
      "y": 536,
    },
    {
      "x": 850,
      "y": 536,
    },
    {
      "x": 850,
      "y": 368,
    },
  ],
  "f8": [
    {
      "x": 700,
      "y": 672,
    },
    {
      "x": 850,
      "y": 672,
    },
    {
      "x": 850,
      "y": 368,
    },
  ],
  "f9": [
    {
      "x": 700,
      "y": 808,
    },
    {
      "x": 850,
      "y": 808,
    },
    {
      "x": 850,
      "y": 368,
    },
  ],
}
`;

exports[`Phase 3: Coordinate Calculation (Snapshot-based) > should calculate correct coordinates for simple-3-lane.bpmn 1`] = `
{
  "end1": {
    "height": 36,
    "width": 36,
    "x": 1032,
    "y": 332,
  },
  "start1": {
    "height": 36,
    "width": 36,
    "x": 232,
    "y": 332,
  },
  "task1": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 310,
  },
  "task2": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 490,
  },
  "task3": {
    "height": 80,
    "width": 100,
    "x": 600,
    "y": 670,
  },
  "xor1": {
    "height": 50,
    "width": 50,
    "x": 425,
    "y": 325,
  },
}
`;
